--- a/packages/i18n/test/output/po/template_ok.pot
+++ b/packages/i18n/test/output/po/template_ok.pot
@@ -1,2 +1,3 @@
 [proton-i18n] ✔ All translations have a context, good job !
 [proton-i18n] ✔ All translations have matching variables
+[proton-i18n] ✔ All translations have unique variables in their context
