--- a/packages/i18n/test/output/po/zh-TW.po
+++ b/packages/i18n/test/output/po/zh-TW.po
@@ -1,2 +1,3 @@
 [proton-i18n] ✔ All translations have a context, good job !
 [proton-i18n] ✔ All translations have matching variables
+[proton-i18n] ✔ All translations have unique variables in their context
